Properly initialize oldStart and oldEnd in PreviewImageProvider::requestImage

Otherwise they may not get assigned any value if the xft exclude range is (0,0), which will make them write random values to the xft exclude range later.

BUG: 409518

Differential Revision: https://phabricator.kde.org/D22707